# ai-research-agent

./: .env.example  .gitignore  main.py  pyproject.toml
agents/: orchestrator.py  poster.py  report.py  research.py
tools/: arxiv_search.py  linkedin_client.py  llm.py  web_search.py  x_client.py
